--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools" >
 
     <application
         android:allowBackup="true"
@@ -11,12 +11,17 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.TestXMLUI"
-        tools:targetApi="31">
+        tools:targetApi="31" >
         <activity
-            android:name=".ui.main_compose.CActivityMainCompose"
+            android:name=".CActivityLandInfo"
+            android:exported="false"
+            android:label="@string/title_activity_cland_info"
+            android:theme="@style/Theme.TestXMLUI" />
+        <activity
+            android:name=".ui.CActivityMainCompose"
             android:exported="true"
             android:label="@string/title_activity_ccompose"
-            android:theme="@style/Theme.TestXMLUI">
+            android:theme="@style/Theme.TestXMLUI" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -24,7 +29,7 @@
         </activity>
         <activity
             android:name=".ui.CActivityMainXML"
-            android:exported="true">
+            android:exported="true" >
         </activity>
     </application>
 
