Пример реализации списка с помощью RecyclerView.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,14 +22,14 @@
             android:exported="true"
             android:label="@string/title_activity_ccompose"
             android:theme="@style/Theme.TestXMLUI" >
+        </activity>
+        <activity
+            android:name=".ui.activitylandlist.CActivityLandListXML"
+            android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-        <activity
-            android:name=".ui.CActivityMainXML"
-            android:exported="true" >
         </activity>
     </application>
 
