--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" >
+    xmlns:tools="http://schemas.android.com/tools">
 
     <application
         android:allowBackup="true"
@@ -11,21 +11,23 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.TestXMLUI"
-        tools:targetApi="31" >
+        tools:targetApi="31">
         <activity
-            android:name=".CActivityLandInfo"
+            android:name=".ui.CActivityLandDetailsClassic"
+            android:exported="false" />
+        <activity
+            android:name=".ui.CActivityLandInfo"
             android:exported="false"
-            android:label="@string/title_activity_cland_info"
+            android:label="@string/title_activity_land_detail"
             android:theme="@style/Theme.TestXMLUI" />
         <activity
-            android:name=".ui.CActivityMainCompose"
+            android:name=".ui.CActivityLandListCompose"
             android:exported="true"
-            android:label="@string/title_activity_ccompose"
-            android:theme="@style/Theme.TestXMLUI" >
-        </activity>
+            android:label="@string/title_activity_land_list"
+            android:theme="@style/Theme.TestXMLUI"/>
         <activity
-            android:name=".ui.activitylandlist.CActivityLandListXML"
-            android:exported="true" >
+            android:name=".ui.activitylandlist.CActivityLandListClassic"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
